# dz21_project1

./: .gitignore  PYTHON411 HW №21 (1).md  PYTHON411 HW №22 (1).md  PYTHON411 HW №23.md  PYTHON411 HW №24.md  PYTHON411 HW №26 (1).md  PYTHON411 HW №27.md  PYTHON411 HW №28.md  PYTHON411 HW №29.md  PYTHON411 HW №30.md  PYTHON411 HW №31.html  PYTHON411 HW №31.md  PYTHON411 HW №32.md  README.md  barbershop.db  data.json  hw23.pptx  manage.py  pyproject.toml  readme_please.txt  requirements.txt  screenshots.pptm  Презентация1.pptx  сброс.pptx
barbershop/: .env  .env.example  barbershop.db  mystral.py  pyproject.toml  requirements.txt  settings.py  test.py  urls.py
barbershop/core/: models.py  views.py
core/: admin.py  apps.py  context_processors.py  forms.py  models.py  mystral.py  signals.py  views.py
core/migrations/: 0001_initial.py  0002_alter_order_status.py  0003_alter_master_options_alter_order_options_and_more.py  0004_alter_review_rating.py  0005_alter_master_photo.py  0006_alter_master_options_alter_service_options_and_more.py  0007_review_ai_checked_status.py
core/teamplatestags/: custom_filters.py
core/templates/: about.html  base.html  landing.html  make_appointment.html  masters_list.html  nav-bar.html  order_detail.html  orders_list.html  orders_list_include.html  review_form.html  reviews.html  services.html  thanks.html
static/: main.css
static/css/: main.css
static/js/: main.js
staticfiles/images/: orig.jfif
users/: apps.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
workflows/: deploy.yml
(+10 files in other folders)
