[project]
name = "dz21-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Ilya Morozov",email = "morozov1308@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "django-jazzmin (>=3.0.1,<4.0.0)",
    "mistralai (>=1.9.1,<2.0.0)",
    "python-telegram-bot (>=22.2,<23.0)"
]

[tool.poetry]
packages = [{include = "dz21_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
